typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement2.ts.stderr
error: Unexpected token Some(Word(E))
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/ClassElements/parserErrorRecovery_ClassElement2.ts:4:8
  |
4 |   enum E {
  |        ^

